--- a/composer.json
+++ b/composer.json
@@ -5,20 +5,26 @@
     "license": "MIT",
     "require": {
         "php": "^5.5 || ^7.0",
-        "sulu/sulu": "1.6.0-RC1 as 1.5.0",
-        "ongr/elasticsearch-bundle": "^1.2.9 || ~5.0",
-        "ongr/elasticsearch-dsl": "^2.2.2 || ~5.0",
+        "sulu/sulu": "dev-develop as 1.5.0",
+        "ongr/elasticsearch-bundle": "^1.2.9 || ^5.0",
+        "ongr/elasticsearch-dsl": "^2.2.2 || ^5.0",
         "jackalope/jackalope": "^1.2.8 || >=1.3.3"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@github.com:yukoff/zendframework-zendsearch.git"
+        }
+    ],
     "require-dev": {
-        "zendframework/zend-stdlib": "2.3.1 as 2.0.0rc5",
+        "zendframework/zend-stdlib": "^2.3.1 || ^3.0",
         "zendframework/zendsearch": "2.*@dev",
-        "symfony/monolog-bundle": "2.4.*",
+        "symfony/monolog-bundle": "^2.4||^3.0",
         "jackalope/jackalope-doctrine-dbal": "^1.2.5",
         "jackalope/jackalope-jackrabbit": "^1.2",
-        "phpunit/phpunit": "^4.8 || ^5.0",
+        "phpunit/phpunit": "^4.8 || ^5.0, <5.4",
 
-        "sulu/document-manager": "0.10-RC1 as 0.9.0",
+        "sulu/document-manager": "dev-develop as 0.9.0",
         "massive/search-bundle": "@dev",
 
         "sulu/automation-bundle": "^1.0",
